Added functions to extract the primary dendrite from a neuron
* Should this really be axon tract?
* Only works on neurons that have Label = 4 in their points inventory,
x$d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,9 @@ S3method(neurites,neuronlist)
 S3method(plot3d,split)
 S3method(primary.neurite,neuron)
 S3method(primary.neurite,neuronlist)
+S3method(primary_dendrite_cable,catmaidneuron)
+S3method(primary_dendrite_cable,neuron)
+S3method(primary_dendrite_cable,neuronlist)
 S3method(prune,catmaidneuron)
 S3method(prune_by_tag,catmaidneuron)
 S3method(prune_by_tag,neuron)
@@ -77,6 +80,7 @@ export(assignside)
 export(average.tracts)
 export(axonal_endings)
 export(axonic_cable)
+export(axonic_endings)
 export(axonic_points)
 export(catmaid_annotate_partners)
 export(catmaid_set_meta_annotations)
@@ -133,6 +137,9 @@ export(overlap.connectivity.matrix)
 export(points_in_neuropil)
 export(pointsinsidemesh)
 export(primary.neurite)
+export(primary_dendrite_cable)
+export(primary_dendrite_endings)
+export(primary_dendrite_points)
 export(prune_by_tag)
 export(prune_distal)
 export(prune_in_volume)
