Start to functions to facilitate v14-seg to v14 transfer
* functions to join neurons, inc, interactively, development in progress
* functions to transfer tags and connectors between spaces
* function to check duplication
* changes to CATMAID neuron upload function, includes options for tags
and connectors
* in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,7 +83,13 @@ export(axonic_cable)
 export(axonic_endings)
 export(axonic_points)
 export(catmaid_annotate_partners)
+export(catmaid_duplicated)
+export(catmaid_find_likely_merge)
+export(catmaid_get_tag)
+export(catmaid_interactive_join)
+export(catmaid_join_skeletons)
 export(catmaid_set_meta_annotations)
+export(catmaid_skeletons_in_bbx)
 export(catmaid_upload_neurons)
 export(cluster_synapses_within_skeleton)
 export(clusterbysynapses)
@@ -110,6 +116,8 @@ export(fafb_seg_hitlist)
 export(fafb_seg_tracing_list)
 export(fafb_segs_stitch_volumes)
 export(fafbseg_get_node_count)
+export(fafbseg_transfer_connectors)
+export(fafbseg_transfer_tags)
 export(flow.centrality)
 export(get.hxsurf)
 export(get.skeleton.from.flycircuit)
