Join connectors and estimate radii with fafbseg
* At Michael Resier's suggestion, use fafbseg to predict radii for manually traced neurons, and push to CATMAID v14
* Function to associate 'free-ish' (i.e. not connected to high node count skeletons) connectors with neurons, using the Google segmentation
* A start to a vignette to showcase these functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(catmaid_delete_neurons)
 export(catmaid_duplicated)
 export(catmaid_find_likely_merge)
 export(catmaid_get_neuronid)
+export(catmaid_get_server)
 export(catmaid_get_tag)
 export(catmaid_interactive_join)
 export(catmaid_join_skeletons)
@@ -100,6 +101,7 @@ export(catmaid_node_time)
 export(catmaid_set_meta_annotations)
 export(catmaid_skeletons_in_bbx)
 export(catmaid_unlock_neurons)
+export(catmaid_update_radius)
 export(catmaid_upload_neurons)
 export(cluster_synapses_within_skeleton)
 export(clusterbysynapses)
@@ -127,9 +129,10 @@ export(fafb_seg_hitlist)
 export(fafb_seg_tracing_list)
 export(fafb_segs_stitch_volumes)
 export(fafbseg_get_node_count)
-export(fafbseg_join_connectors_in_brainmaps_volumes)
+export(fafbseg_join_connectors_in_ngl_volumes)
 export(fafbseg_transfer_connectors)
 export(fafbseg_transfer_tags)
+export(fafbseg_update_node_radii)
 export(flow.centrality)
 export(get.hxsurf)
 export(get.skeleton.from.flycircuit)
@@ -138,6 +141,7 @@ export(get_connected_skeletons)
 export(in_neuropil)
 export(inside_neuropils)
 export(label_neuron.class)
+export(local_conn)
 export(make.anatomical.model)
 export(make.mirror.transform)
 export(manually_assign_axon_dendrite)
