--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Description: A selection of functions for analysis of neuronal morphology and
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 6.1.1
-Suggests: testthat, gplots, ggplot2, easyGgplot2, doMC, elmr, yaml, ks, misc3d, lhns
+Suggests: knitr, rmarkdown, testthat, gplots, ggplot2, easyGgplot2, doMC, elmr, yaml, ks, misc3d, lhns
+VignetteBuilder: knitr
 Depends: R (>= 2.10), nat, catmaid, alphashape3d, nat.nblast, nat.flybrains
 Imports: Rvcg, nabor, Morpho, dplyr, nat.templatebrains, rgl, plyr,
     igraph, googlesheets
