Updated edit catmaid and neuronvolume documentation
* Also fixed some errors, e.g. erroenous breaks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ export(catmaid_get_neuronid)
 export(catmaid_get_server)
 export(catmaid_get_tag)
 export(catmaid_interactive_join)
+export(catmaid_interactive_name_transfer)
 export(catmaid_join_skeletons)
 export(catmaid_link_connectors)
 export(catmaid_lock_neurons)
