--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,7 @@ RoxygenNote: 6.1.1
 Suggests: knitr, rmarkdown, testthat, gplots, ggplot2, easyGgplot2, doMC, elmr, yaml, ks, misc3d, lhns
 VignetteBuilder: knitr
 Depends: R (>= 2.10), nat, catmaid, alphashape3d, nat.nblast, nat.flybrains
-Imports: Rvcg, nabor, Morpho, dplyr, nat.templatebrains, rgl, plyr,
-    igraph, googlesheets
+Imports: Rvcg, nabor, Morpho, dplyr, nat.templatebrains, rgl, plyr, igraph, googlesheets
 URL: https://github.com/alexanderbates/catnat
 BugReports: https://github.com/alexanderbates/catnat/issues
 Remotes: kassambara/easyGgplot2,
