--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,16 +11,29 @@ Description: A selection of functions for analysis of neuronal morphology and
     of the functions are driven by the need to analyse the results of annotation
     of 3D electron microscopy data from the `CATMAID` web application. This 
     package is largely an incubator for work by Alex Bates and is subject to 
-    frequent udpates.
+    frequent updates.
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 6.1.1
-Suggests: knitr, rmarkdown, testthat, gplots, ggplot2, easyGgplot2, doMC, elmr, yaml, ks, misc3d, lhns
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat,
+    gplots,
+    ggplot2,
+    easyGgplot2,
+    doMC,
+    elmr,
+    yaml,
+    ks,
+    misc3d,
+    lhns,
+    spelling
 VignetteBuilder: knitr
 Depends: R (>= 2.10), nat, catmaid, alphashape3d, nat.nblast, nat.flybrains
 Imports: Rvcg, nabor, Morpho, dplyr, nat.templatebrains, rgl, plyr, igraph, googlesheets
-URL: https://github.com/alexanderbates/catnat
-BugReports: https://github.com/alexanderbates/catnat/issues
+URL: https://github.com/jefferislab/catnat
+BugReports: https://github.com/jefferislab/catnat/issues
 Remotes: kassambara/easyGgplot2,
     jefferis/nat,
     jefferis/rcatmaid,
@@ -29,3 +42,4 @@ Remotes: kassambara/easyGgplot2,
     jefferis/elmr,
     jefferislab/lhns
 Encoding: UTF-8
+Language: en-GB
