--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Suggests:
     spelling
 VignetteBuilder: knitr
 Depends: R (>= 2.10), nat, catmaid, alphashape3d, nat.nblast, nat.flybrains
-Imports: Rvcg, nabor, Morpho, dplyr, nat.templatebrains, rgl, plyr, igraph, googlesheets, fafbseg, pbapply, reshape2
+Imports: Rvcg, nabor, Morpho, dplyr, nat.templatebrains, rgl, plyr, igraph, googlesheets
 URL: https://github.com/alexanderbates/catnat
 BugReports: https://github.com/jefferislab/catnat/issues
 Remotes: kassambara/easyGgplot2,
