Add missing base function imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -228,8 +228,13 @@ importFrom(nat,prune_strahler)
 importFrom(nat,prune_vertices)
 importFrom(nat,resample)
 importFrom(nat.templatebrains,xform_brain)
+importFrom(stats,aggregate)
 importFrom(stats,complete.cases)
+importFrom(stats,median)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(utils,browseURL)
+importFrom(utils,read.csv)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
