add lineage annotation function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ export(prune_microtubules)
 export(prune_online)
 export(prune_strahler.catmaidneuron)
 export(prune_vertices.catmaidneuron)
+export(read.neurons.catmaid.meta)
 export(read.neurons.fafbseg)
 export(rescue.dps)
 export(reverse.name.side)
