Sampling sheet fucntions from Istvan Taisz

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,6 +179,8 @@ export(scan4matching)
 export(scan_lh_matches)
 export(seebroken3d)
 export(seesplit3d)
+export(segments_ranked_post)
+export(segments_ranked_pre)
 export(select_neurons)
 export(select_points)
 export(set_segmentation_location)
