--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: A selection of functions for analysis of neuronal morphology and
     frequent updates.
 License: GPL-3
 LazyData: TRUE
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.2
 Suggests: 
     knitr,
     rmarkdown,
@@ -31,10 +31,11 @@ Suggests:
     fafbseg,
     pbapply,
     reshape2,
-    spelling
+    spelling,
+    googlesheets4
 VignetteBuilder: knitr
 Depends: R (>= 2.10), nat, catmaid, alphashape3d, nat.nblast, nat.flybrains
-Imports: Rvcg, nabor, Morpho, dplyr, nat.templatebrains, rgl, plyr, igraph, googlesheets
+Imports: Rvcg, nabor, Morpho, dplyr, nat.templatebrains, rgl, plyr, igraph
 URL: https://github.com/jefferislab/catnat
 BugReports: https://github.com/jefferislab/catnat/issues
 Remotes: kassambara/easyGgplot2,
