--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,7 @@ URL: https://github.com/jefferislab/catnat
 BugReports: https://github.com/jefferislab/catnat/issues
 Remotes: kassambara/easyGgplot2,
     natverse/nat,
-    natverse/rcatmaid,
+    catmaid=natverse/rcatmaid,
     natverse/nat.templatebrains,
     natverse/nat.flybrains,
     natverse/elmr,
